Fix admin table height overflow issue

--- a/src/app/list-woodburnings/list-woodburnings.component.scss
+++ b/src/app/list-woodburnings/list-woodburnings.component.scss
@@ -1,6 +1,5 @@
 .mat-table {
   width: 100%;
-  max-height: 500px;
 
   .mat-header-cell {
     font-size: 14px;
